--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "Dow_30_Grid",
+  "name": "dow-30-grid",
   "version": "0.1.2",
   "description": "Make Stocks Great Again",
   "main": "main.js",
   "license": "CC0-1.0",
   "dependencies": {
     "request": "2.81.0",
-    "teddy": "0.4.11"
+    "teddy": "0.4.12",
+    "moment": "2.18.1"
   },
   "devDependencies": {
     "electron": "~1.6.2",
-    "electron-packager": "8.6.0"
+    "electron-packager": "8.7.0"
   },
   "scripts": {
     "start": "electron .",
