--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "dow-30-grid",
   "version": "0.1.5",
   "description": "Display information about the Dow 30 in one handy ui",
+  "author": "Troy Coutu <autre31415@gmail.com>",
   "main": "main.js",
   "license": "CC0-1.0",
   "dependencies": {
     "request": "2.81.0",
-    "teddy": "0.4.14",
+    "teddy": "0.4.18",
     "moment": "2.18.1"
   },
   "devDependencies": {
-    "electron": "1.6.10",
-    "electron-packager": "8.7.0"
+    "electron": "1.7.6",
+    "electron-packager": "9.0.1",
+    "standard": "10.0.3",
+    "lint-staged": "4.1.3",
+    "husky": "0.14.3"
   },
   "scripts": {
     "start": "electron .",
-    "build": "npm run build-win && npm run build-mac && npm run build-linux",
-    "build-win": "electron-packager . 'Dow 30 Grid' --win32metadata.FileDescription='Dow 30 Grid' --asar --prune --out=build --overwrite=true --platform=win32 --arch=x64",
-    "build-mac": "electron-packager . 'Dow 30 Grid' --app-bundle-id=dow-30-grid --asar --prune --out=build --overwrite=true --platform=darwin --arch=x64",
-    "build-linux": "electron-packager . 'Dow 30 Grid' --asar --prune --out=build --overwrite=true --platform=linux --arch=x64"
+    "build": "node packager.js",
+    "test": "standard",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": "standard"
   }
 }
