--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "moment": "2.18.1"
   },
   "devDependencies": {
-    "electron": "1.7.6",
-    "electron-packager": "9.0.1",
+    "archiver": "^2.0.0",
+    "electron": "1.7.8",
+    "electron-packager": "9.1.0",
     "standard": "10.0.3",
     "lint-staged": "4.1.3",
     "husky": "0.14.3"
